examples/kubernetes/01-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: external-storage-service
  namespace: boomi-flow
  labels:
    app: external-storage-service
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: external-storage-service
